Update file location

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="assets/image/logo.png" alt="Logo">
+            <img src="Assets/image/logo.png" alt="Logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -89,19 +89,19 @@
         <div class="col-4">
         <div class="category-1 d-flex justify-content-between align-items-center">
           <h1>Watchs</h1>
-        <img src="assets/image/categories/watch.png" alt="watch">
+        <img src="Assets/image/categories/watch.png" alt="watch">
         </div>
         </div>
         <div class="col-4">
           <div class="category-2 d-flex justify-content-between align-items-center">
             <h1>Bags</h1>
-            <img src="assets/image/categories/bag.png" alt="watch">
+            <img src="Assets/image/categories/bag.png" alt="watch">
           </div>
             </div>
         <div class="col-4">
           <div class="category-3 d-flex justify-content-between align-items-center">
             <h1>Shoes</h1>
-            <img src="assets/image/categories/shoes.png" alt="watch">
+            <img src="Assets/image/categories/shoes.png" alt="watch">
           </div>
             </div>
           </div>
